force-app/main/default/objects/Project_Assignment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>VendorOrCustomer</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Assignments</relationshipLabel>
    <relationshipName>Project_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>