force-app/main/default/objects/Project_Assignment__c/fields/Project_Line__c.field-meta.xml
<CustomField>
    <fullName>Project_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Line</label>
    <referenceTo>Project_Line__c</referenceTo>
    <relationshipLabel>Project Assignments</relationshipLabel>
    <relationshipName>Project_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>