force-app/main/default/objects/Project_Assignment__c/fields/Project_Role__c.field-meta.xml
<CustomField>
    <fullName>Project_Role__c</fullName>
    <label>Project Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>