force-app/main/default/objects/Project_Assignment__c/fields/VendorOrCustomer__c.field-meta.xml
<CustomField>
    <fullName>VendorOrCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VendorOrCustomer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Assignments</relationshipLabel>
    <relationshipName>Project_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>